--- a/app/templates/meetings/publish/publication-actions/detail.hbs
+++ b/app/templates/meetings/publish/publication-actions/detail.hbs
@@ -1,8 +1,10 @@
 {{page-title "Detail"}}
-<AuLink @route="meetings.publish.publication-actions" @skin="secondary">
-  <AuIcon @icon="arrow-left" @alignment="left" />
-  {{t 'publication-actions.return'}}
-</AuLink>
-<div class="publication-actions-detail-container">
+<div class="au-u-margin-top au-u-margin-left">
+  <AuLink @route="meetings.publish.publication-actions" @skin="secondary">
+    <AuIcon @icon="arrow-left" @alignment="left"/>
+    {{t 'publication-actions.return'}}
+  </AuLink>
+</div>
+<div class="publication-actions-detail-container au-u-margin-left au-u-margin-right au-u-margin-top">
   {{html-safe this.model}}
 </div>
