fix untranslated string issue

--- a/app/templates/meetings/publish/publication-actions/detail.hbs
+++ b/app/templates/meetings/publish/publication-actions/detail.hbs
@@ -1,4 +1,4 @@
-{{page-title "Detail"}}
+{{page-title (t "publication-actions.details")}}
 <div class="au-u-margin-top au-u-margin-left">
   <AuLink @route="meetings.publish.publication-actions" @skin="secondary">
     <AuIcon @icon="arrow-left" @alignment="left"/>
