--- a/app/components/signatures/timeline-step.hbs
+++ b/app/components/signatures/timeline-step.hbs
@@ -65,12 +65,12 @@
         {{else if (eq this.signaturesCount 1)}}
           <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
             <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.first-signature"}}</AuHeading>
-            <Signatures::SignedResource @signature={{this.activeSignatures.firstObject}} @canDelete={{not this.isPublished}} />
+            <Signatures::SignedResource @signature={{get this.activeSignatures "0"}} @canDelete={{not this.isPublished}} />
           </div>
           <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
             <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.second-signature"}}</AuHeading>
             {{#if this.showDeletedSecondSignature}}
-              <Signatures::SignedResource @signature={{this.deletedSignatures.lastObject}} />
+              <Signatures::SignedResource @signature={{this.lastDeletedSignature}} />
             {{/if}}
             <AuButton
               {{on "click" (fn (mut this.showSigningModal) true)}}
@@ -99,8 +99,8 @@
         {{else}} {{!-- No signatures placed --}}
           <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
             <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.first-signature"}}</AuHeading>
-            {{#if this.deletedSignatures.lastObject}}
-              <Signatures::SignedResource @signature={{this.deletedSignatures.lastObject}} />
+            {{#if this.lastDeletedSignature}}
+              <Signatures::SignedResource @signature={{this.lastDeletedSignature}} />
             {{/if}}
             <AuButton
               {{on "click" (fn (mut this.showSigningModal) true)}}
