reorder publication page translations a bit

--- a/app/templates/meetings/publish/notulen.hbs
+++ b/app/templates/meetings/publish/notulen.hbs
@@ -3,7 +3,7 @@
     <c.header @badgeIcon={{status-icon-name this.status}} @badgeSkin="brand">
       <AuToolbar @nowrap={{true}}>
         <AuHeading @level="2" @skin="3" class="au-u-capitalize">
-          {{t "meetings.publish.document"}}
+          {{t "meetings.publish.document.title"}}
         </AuHeading>
         <AuPill @skin={{publication-status-color this.status}} class="au-u-margin-left">{{human-publication-status this.status}}</AuPill>
       </AuToolbar>
