--- a/app/templates/meetings/publish.hbs
+++ b/app/templates/meetings/publish.hbs
@@ -24,31 +24,31 @@
             <li class="au-c-list-navigation__item">
               <AuNavigationLink @route="meetings.publish.agenda" @model={{@model.id}}>
                 <AuIcon @icon="calendar" @alignment="left" />
-                {{t "meetings.publish.agenda"}}
+                {{t "meetings.publish.agenda.title"}}
               </AuNavigationLink>
             </li>
             <li class="au-c-list-navigation__item">
               <AuNavigationLink @route="meetings.publish.besluitenlijst" @model={{@model.id}}>
                 <AuIcon @icon="unordered-list" @alignment="left" />
-                {{t "meetings.publish.decision-list"}}
+                {{t "meetings.publish.decision-list.title"}}
               </AuNavigationLink>
             </li>
             <li class="au-c-list-navigation__item">
               <AuNavigationLink @route="meetings.publish.uittreksels" @model={{@model.id}}>
                 <AuIcon @icon="documents" @alignment="left" />
-                {{t "meetings.publish.extracts"}}
+                {{t "meetings.publish.extracts.title"}}
               </AuNavigationLink>
             </li>
             <li class="au-c-list-navigation__item">
               <AuNavigationLink @route="meetings.publish.notulen" @model={{@model.id}}>
                 <AuIcon @icon="document" @alignment="left" />
-                {{t "meetings.publish.document"}}
+                {{t "meetings.publish.document.title"}}
               </AuNavigationLink>
             </li>
             <li class="au-c-list-navigation__item">
               <AuNavigationLink @route="meetings.publish.publication-actions" @model={{@model.id}}>
                 <AuIcon @icon="book" @alignment="left" />
-                {{t "meetings.publish.publication-actions"}}
+                {{t "meetings.publish.publication-actions.title"}}
               </AuNavigationLink>
             </li>
           </ul>
