correctly translate agenda publish page

--- a/app/components/signatures/agenda/timeline-step.hbs
+++ b/app/components/signatures/agenda/timeline-step.hbs
@@ -1,5 +1,6 @@
 <li>
   <Signatures::TimelineStep
+    @isAgenda={{true}}
     @name={{@name}}
     @document={{@agenda}}
     @signedResources={{@agenda.signedResources}}
