--- a/app/templates/meetings/publish/uittreksels/index.hbs
+++ b/app/templates/meetings/publish/uittreksels/index.hbs
@@ -1,5 +1,5 @@
 <AuDataTable @content={{this.model}}
-             @noDataMessage={{t "publish.no-excerpts-message"}}
+             @noDataMessage={{t "publish.no-extracts-message"}}
              @sort={{this.sort}}
              @page={{this.page}}
              @size={{this.pageSize}}
@@ -9,7 +9,7 @@
       <AuToolbar @size="large" as |Group|>
         <Group>
           <AuHeading @skin="2">
-            {{t "publish.excerpts"}}
+            {{t "publish.extracts"}}
           </AuHeading>
         </Group>
         <Group class="au-u-hide-on-print">
