--- a/app/templates/meetings/publish/uittreksels/show.hbs
+++ b/app/templates/meetings/publish/uittreksels/show.hbs
@@ -8,7 +8,7 @@
   {{else}}
     <div class="au-u-margin-bottom-small au-u-hide-on-print">
       <AuLink @route="meetings.publish.uittreksels" @skin="secondary" @icon="arrow-left" @iconAlignment="left">{{t
-        "publish.excerpts-overview"}}</AuLink>
+        "publish.extracts-overview"}}</AuLink>
     </div>
     <AuCard
       @divided={{true}}
