--- a/app/templates/meetings/publish/publication-actions/index.hbs
+++ b/app/templates/meetings/publish/publication-actions/index.hbs
@@ -14,6 +14,20 @@
             {{t 'meetings.publish.publication-actions.title'}}
           </AuHeading>
         </Group>
+        <Group>
+          <AuLabel>
+            {{t "meetings.publish.publication-actions.document-type-filter.label"}}
+          </AuLabel>
+          <PowerSelect
+            @allowClear={{true}}
+            @options={{this.types}}
+            @selected={{this.selectedType}}
+            @onChange={{this.updateType}}
+            @placeholder={{t "meetings.publish.publication-actions.document-type-filter.placeholder"}}
+            as |category|>
+            {{category.label}}
+          </PowerSelect>
+        </Group>
       </AuToolbar>
     </menu.general>
   </table.menu>
