--- a/app/components/publishing-log-document-name.hbs
+++ b/app/components/publishing-log-document-name.hbs
@@ -1,8 +1,15 @@
-<span>
+<span class="au-u-flex">
   {{#if this.data.value.deleted}}
     <AuLink @route="meetings.publish.publication-actions.detail" @model={{@log.id}}>
-      {{this.data.value.documentName}} {{#if this.data.value.deleted}}({{t "meetings.publish.publication-actions.deleted"}}){{/if}}
+      {{this.data.value.documentName}} 
     </AuLink>
+    {{#if this.data.value.deleted}}
+      <span class="au-u-margin-left-small">
+        <AuPill @skin="error" @icon="trash">
+          {{t "meetings.publish.publication-actions.deleted"}}
+        </AuPill>
+      </span>
+    {{/if}}
   {{else}}
     <AuLink @route={{this.data.value.route}}>
       {{this.data.value.documentName}}
