support showing template comments in agendapoint and RS editor

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -37,6 +37,7 @@
 @import "date-plugin";
 @import "variable-plugin";
 @import "besluit-plugin";
+@import "template-comments-plugin";
 @import "project/p-annotations"; // @TODO: refactor in ember-rdfa-editor
 
 
