--- a/app/templates/regulatory-statements/edit.hbs
+++ b/app/templates/regulatory-statements/edit.hbs
@@ -101,7 +101,12 @@
       <RdfaDatePlugin::Card
         @controller={{this.controller}}
         @options={{this.config.date}}/>
-      <VariablePlugin::TemplateVariableCard @controller={{this.controller}} @options={{this.config.templateVariable}}/>
+      <VariablePlugin::Codelist::Edit
+        @controller={{this.controller}}
+        @options={{this.codelistEditOptions}}/>
+      <VariablePlugin::Location::Edit
+        @controller={{this.controller}}
+        @options={{this.locationEditOptions}}/>
     </:sidebar>
   </RdfaEditorContainer>
 </AuBodyContainer>
