--- a/app/templates/regulatory-statements/edit.hbs
+++ b/app/templates/regulatory-statements/edit.hbs
@@ -87,6 +87,7 @@
         @options={{this.config.date}}
       />
       <StandardTemplatePlugin::Card @controller={{this.controller}}/>
+      <TemplateCommentsPlugin::Insert @controller={{this.controller}}/>
     </:sidebarCollapsible>
     <:sidebar>
       <ArticleStructurePlugin::StructureCard
@@ -107,6 +108,7 @@
       <VariablePlugin::Location::Edit
         @controller={{this.controller}}
         @options={{this.locationEditOptions}}/>
+      <TemplateCommentsPlugin::EditCard @controller={{this.controller}}/>
     </:sidebar>
   </RdfaEditorContainer>
 </AuBodyContainer>
