--- a/app/components/meeting-form.hbs
+++ b/app/components/meeting-form.hbs
@@ -1,4 +1,4 @@
-<div class="au-c-app-chrome">
+<div class="au-c-app-chrome" {{did-insert (perform this.loadData) this.zitting}}>
   <AuToolbar @size="small" class="au-u-padding-bottom-none" as |Group|>
     <Group>
       <AuLink @route="inbox.meetings" @skin="secondary" @icon="arrow-left" @iconAlignment="left">
