refactor(votings): use relationship-based data fetching
this allows for optimization with includes.
A high pagesize is set to avoid issues.

--- a/app/components/treatment/voting/modal.hbs
+++ b/app/components/treatment/voting/modal.hbs
@@ -40,7 +40,7 @@
     </tr>
   </thead>
   <tbody>
-    {{#if this.fetchStemmingen.lastSuccessful}}
+    {{#if this.stemmingen.length}}
       {{#each this.stemmingen as |stemming|}}
         <tr>
           <td style="max-width: 30rem;">
